; ModuleID = '/home/carl/AnghaBench/darwin-xnu/osfmk/vm/extr_bsd_vm.c_vnode_pager_bootstrap.c'
source_filename = "/home/carl/AnghaBench/darwin-xnu/osfmk/vm/extr_bsd_vm.c_vnode_pager_bootstrap.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@MAX_VNODE = common dso_local global i64 0, align 8
@PAGE_SIZE = common dso_local global i32 0, align 4
@.str = private unnamed_addr constant [23 x i8] c"vnode pager structures\00", align 1
@vnode_pager_zone = common dso_local global i32 0, align 4
@Z_CALLERACCT = common dso_local global i32 0, align 4
@FALSE = common dso_local global i32 0, align 4
@Z_NOENCRYPT = common dso_local global i32 0, align 4
@TRUE = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @vnode_pager_bootstrap() #0 {
  %1 = alloca i32, align 4
  store i32 4, i32* %1, align 4
  %2 = load i32, i32* %1, align 4
  %3 = load i64, i64* @MAX_VNODE, align 8
  %4 = trunc i64 %3 to i32
  %5 = load i32, i32* %1, align 4
  %6 = mul nsw i32 %4, %5
  %7 = load i32, i32* @PAGE_SIZE, align 4
  %8 = call i32 @zinit(i32 %2, i32 %6, i32 %7, i8* getelementptr inbounds ([23 x i8], [23 x i8]* @.str, i64 0, i64 0))
  store i32 %8, i32* @vnode_pager_zone, align 4
  %9 = load i32, i32* @vnode_pager_zone, align 4
  %10 = load i32, i32* @Z_CALLERACCT, align 4
  %11 = load i32, i32* @FALSE, align 4
  %12 = call i32 @zone_change(i32 %9, i32 %10, i32 %11)
  %13 = load i32, i32* @vnode_pager_zone, align 4
  %14 = load i32, i32* @Z_NOENCRYPT, align 4
  %15 = load i32, i32* @TRUE, align 4
  %16 = call i32 @zone_change(i32 %13, i32 %14, i32 %15)
  %17 = call i32 (...) @swapfile_pager_bootstrap()
  %18 = call i32 (...) @shared_region_pager_bootstrap()
  ret void
}

declare dso_local i32 @zinit(i32, i32, i32, i8*) #1

declare dso_local i32 @zone_change(i32, i32, i32) #1

declare dso_local i32 @swapfile_pager_bootstrap(...) #1

declare dso_local i32 @shared_region_pager_bootstrap(...) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
